[package]
name = "askus-v2"
version = "0.1.0"
edition = "2024"

[features]
default = ["bot", "api"]
bot = []
api = []

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
serenity = "*"
thiserror = "*"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "*"
axum = "*"